# solx-llvm

./: README.md
.github/workflows/: regression-tests.yml
lld/: CMakeLists.txt
lld/ELF/: Config.h
llvm/include/llvm/MC/: MCELFObjectWriter.h
llvm/lib/Analysis/: TargetLibraryInfo.cpp
llvm/lib/MC/: ELFObjectWriter.cpp
llvm/lib/Transforms/Scalar/: MemCpyOptimizer.cpp
llvm/test/: CMakeLists.txt
llvm/test/CodeGen/EVM/: O0-pipeline.ll  O1-pipeline.ll  O3-pipeline.ll  bps-implicit-def.mir  clz-ctz.ll  irreducible-cfg-reg-liveness-fixup.mir  irreducible-cfg-unreachable-block.mir  irreducible-cfg.mir  memintrinsics-opt.ll  memset-opt.ll  optimize-intervals-implicit-def.mir  skip-dbg-values-during-stackification.mir  stack-too-deep-2.ll  verifier-memintrinsics.ll
llvm/test/MC/EVM/: resolve-debug-relocs.ll  split-dwarf-output.ll
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir-c/: BuiltinAttributes.h
mlir/include/mlir-c/Dialect/: Sol.h  Yul.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/lib/CAPI/Dialect/: CMakeLists.txt  Sol.cpp  SolPasses.cpp  Yul.cpp  YulPasses.cpp
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Sol/: CMakeLists.txt  SolBase.cpp  SolOps.cpp
mlir/lib/Dialect/Sol/Transforms/: CMakeLists.txt  Immutables.cpp  LoopInvariantCodeMotion.cpp  ModifierOpLowering.cpp  SolImmutables.cpp  SolLoopInvariantCodeMotion.cpp  SolModifierOpLowering.cpp
mlir/test/: CMakeLists.txt
mlir/test/CAPI/: CMakeLists.txt  sol.c  yul.c
(+61 files in other folders)
